BE/error/src/main/java/com/example/demo/auth/application/support/TokenExtractor.java
package com.example.demo.auth.application.support;

import jakarta.servlet.http.HttpServletRequest;

public interface TokenExtractor {

    String extract(HttpServletRequest request);
}